--- a/index.html
+++ b/index.html
@@ -1,9 +1,90 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-  <title>Mi Página</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bustos Memoriales</title>
+  <style>
+    body {
+      font-family: "Georgia", serif;
+      background-color: #f8f8f8;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #222;
+      color: #fff;
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+    }
+    section {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 1rem;
+      line-height: 1.6;
+    }
+    .cta {
+      text-align: center;
+      margin: 2rem 0;
+    }
+    .cta a {
+      background-color: #25D366; /* color verde WhatsApp */
+      color: #fff;
+      padding: 1rem 2rem;
+      text-decoration: none;
+      font-size: 1.2rem;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
+    }
+    .cta a:hover {
+      background-color: #128C7E;
+    }
+    footer {
+      background-color: #222;
+      color: #ccc;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
 <body>
-  <h1>Hola, esta es mi página en GitHub Pages</h1>
+  <header>
+    <h1>Bustos Memoriales</h1>
+    <p>Un homenaje eterno para seres queridos y mascotas</p>
+  </header>
+
+  <section>
+    <h2>Sobre nuestro trabajo</h2>
+    <p>
+      Cada busto memorial es creado con respeto y dedicación, buscando honrar la memoria 
+      de quienes nos acompañaron en vida. Nuestro arte está pensado para transmitir 
+      serenidad y permanencia, tanto para personas como para mascotas.
+    </p>
+  </section>
+
+  <section>
+    <h2>Cómo solicitar un busto</h2>
+    <p>
+      El proceso es sencillo: comparte con nosotros las fotografías y detalles de la persona 
+      o mascota que deseas homenajear, y trabajaremos contigo para personalizar cada detalle.
+    </p>
+  </section>
+
+  <div class="cta">
+    <!-- Reemplaza el número con tu WhatsApp -->
+    <a href="https://wa.me/521XXXXXXXXXX?text=Hola,%20quiero%20solicitar%20información%20sobre%20los%20bustos%20memoriales." target="_blank">
+      Iniciar solicitud por WhatsApp
+    </a>
+  </div>
+
+  <footer>
+    <p>&copy; 2026 Bustos Memoriales. Todos los derechos reservados.</p>
+  </footer>
 </body>
 </html>
