Fix HTML formatting for image alignment

--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
     <p>Un homenaje eterno para seres queridos y mascotas</p>
   </header>
 
-
+<p align="center">
 <img src="bus1.png" alt="Imagen expandible" class="imagen-expandible">
 
-  
+</p>
   <section>
     <h2>Sobre nuestro trabajo</h2>
     <p>
