--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
   <section>
     <h2>Sobre nuestro trabajo</h2>
     <p>
-      Cada busto memorial es creado con respeto y dedicación, buscando honrar la memoria 
-      de quienes nos acompañaron en vida. Nuestro arte está pensado para transmitir 
-      serenidad y permanencia, tanto para personas como para mascotas.
+      Elaborado con resina de la más alta calidad , cada busto memorial es creado con respeto y dedicación, para honrar la memoria 
+      de nuestros seres queridos 
     </p>
   </section>
 
