--- a/index.html
+++ b/index.html
@@ -96,7 +96,12 @@
     <p>
       Elaborado con resina de la más alta calidad , cada busto memorial es creado con respeto y dedicación, para honrar la memoria 
       de nuestros seres queridos 
+
     </p>
+<p align="center">
+<img src="bannerbm.png" alt="Imagen expandible" class="imagen-expandible">
+</p>
+   
   </section>
 
   <section>
