Update text and structure in index.html

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
   <section>
     <h2>Sobre nuestro trabajo</h2>
     <p>
-      Elaborado con resina de la más alta calidad , cada busto memorial es creado con respeto y dedicación, para honrar la memoria 
-      de nuestros seres queridos 
+      Elaborado con resina de la más alta calidad , creamos tu pieza con respeto y dedicación, para honrar la memoria 
+     de nuestros seres queridos 
 
     </p>
 <p align="center">
@@ -107,9 +107,21 @@
   <section>
     <h2>Cómo solicitar un busto</h2>
     <p>
-      El proceso es sencillo: comparte con nosotros las fotografías y detalles de la persona 
-      o mascota que deseas homenajear, y trabajaremos contigo para personalizar cada detalle.
-    </p>
+      El proceso es sencillo: 
+     <br>Comparte con nosotros las fotografías de la persona o mascota
+
+<p align="center">
+<img src="shad1.png" alt="Imagen expandible" class="imagen-expandible">
+</p>
+     <br>
+     Te enviaremos un boceto para tu aprobación, pidiendo el 50% de anticipo 
+          </p>
+   <br>
+<p align="center">
+  Trabajaremos inmediatamente en tu pedido. El tiempode respuesta es de 3 a 5 días hábiles 
+<img src="shad2.png" alt="Imagen expandible" class="imagen-expandible">
+</p>
+
   </section>
 
   <div class="cta">
@@ -120,7 +132,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2026 Bustos Memoriales. Todos los derechos reservados.</p>
+    <p>&copy; 2026 Bustos Memoriales. Todos los derechos reservados, <br>replicar este contenido sin autorización podria contraer problemas legales.</p>
   </footer>
 </body>
 </html>
