Add header section to the main content
Added header section to the main content area and adjusted the layout.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,16 @@
 <img src="bus2.png" alt="Imagen expandible" class="imagen-expandible">
 
 </p>
+
+
+
+ 
+
+ 
+ 
   <section>
+
+    <header>
     <h2>Sobre nuestro trabajo</h2>
     <p>
       Elaborado con resina de la más alta calidad , creamos tu pieza con respeto y dedicación, para honrar la memoria 
@@ -101,8 +110,8 @@
 <p align="center">
 <img src="bannerbm.png" alt="Imagen expandible" class="imagen-expandible">
 </p>
-   
-  </section>
+ </header>   
+
 
   <section>
     <h2>Cómo solicitar un busto</h2>
