--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   </header>
 
 <p align="center">
-<img src="bus2.png" alt="Imagen expandible" class="imagen-expandible">
+<img src="busto_notext.png" alt="Imagen expandible" class="imagen-expandible">
 
 </p>
 
