--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   </header>
 
 <p align="center">
-<img src="busto_notext.png" alt="Imagen expandible" class="imagen-expandible">
+<img src="bustoing.png" alt="Imagen expandible" class="imagen-expandible">
 
 </p>
 
@@ -100,16 +100,16 @@
  
   <section>
 
-    <header>
+  
     <h1>Sobre nuestro trabajo</h1>
-      </header>   
+     
     <p>
       Elaborado con resina de la más alta calidad , creamos tu pieza con respeto y dedicación, para honrar la memoria 
      de nuestros seres queridos 
 
     </p>
 <p align="center">
-<img src="bannerbm.png" alt="Imagen expandible" class="imagen-expandible">
+<img src="BanWeb.png" alt="Imagen expandible" class="imagen-expandible">
 </p>
 
 
