--- a/index.html
+++ b/index.html
@@ -127,8 +127,9 @@
      Te enviaremos un boceto para tu aprobación, pidiendo el 50% de anticipo 
           </p>
    <br>
-<p align="center">
+
   Trabajaremos inmediatamente en tu pedido. El tiempode respuesta es de 3 a 5 días hábiles 
+   <p align="center">
 <img src="shad2.png" alt="Imagen expandible" class="imagen-expandible">
 </p>
 
@@ -136,7 +137,7 @@
 
   <div class="cta">
     <!-- Reemplaza el número con tu WhatsApp -->
-    <a href="https://wa.me/525637790623?text=Hola,%20quiero%20solicitar%20información%20sobre%20los%20bustos%20memoriales." target="_blank">
+    <a href="https://wa.me/5511895799?text=Hola, deseo cotizar,%20quiero%20solicitar%20información%20sobre%20los%20bustos%20memoriales." target="_blank">
       Iniciar solicitud por WhatsApp
     </a>
   </div>
