--- a/index.html
+++ b/index.html
@@ -127,16 +127,20 @@
    
      <br>
    <h1>
-     Te enviaremos un boceto para tu aprobación, pidiendo el 50% de anticipo 
+     Te enviaremos un boceto para tu aprobación
    </h1>
-          
-   <br>
 
-  Trabajaremos inmediatamente en tu pedido. El tiempode respuesta es de 3 a 5 días hábiles 
    <p align="center">
-<img src="shad2.png" alt="Imagen expandible" class="imagen-expandible">
-</p>
+   <img src="shad2.png" alt="Imagen expandible" class="imagen-expandible">
+   </p>
+    
+    <br>
 
+    <h1>
+Trabajamos con el 50% de anticipo . Tiempo de entrega a 3 a 5 días hábiles  
+    </h1>
+  
+ 
   </section>
 
   <div class="cta">
