Add header with title and copyright information
Added a header section with title and copyright notice.

--- a/index.html
+++ b/index.html
@@ -153,5 +153,16 @@ Trabajamos con el 50% de anticipo . Tiempo de entrega a 3 a 5 días hábiles
   <footer>
     <p>&copy; 2026 Bustos Memoriales. Todos los derechos reservados, <br>replicar este contenido sin autorización podria contraer problemas legales.</p>
   </footer>
+
+
+ <header>
+    <h1>Bustos Memoriales</h1>
+    <p>  
+     &copy; 2026 BustoMemorial.com. Todos los derechos reservados, <br>replicar este contenido sin autorización podria contraer problemas legales
+     
+     </p>
+  </header>
+
+   
 </body>
 </html>
