Update WhatsApp link text and remove header

--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@ Trabajamos con el 50% de anticipo . Tiempo de entrega a 3 a 5 días hábiles
   </section>
 
   <div class="cta">
-    <!-- Reemplaza el número con tu WhatsApp -->
+    
     <a href="https://wa.me/5511895799?text=Hola, deseo cotizar,%20quiero%20solicitar%20información%20sobre%20los%20bustos%20memoriales." target="_blank">
-      Iniciar solicitud por WhatsApp
+      Cotiza gratis en WhatsApp
     </a>
   </div>
 
@@ -155,12 +155,6 @@ Trabajamos con el 50% de anticipo . Tiempo de entrega a 3 a 5 días hábiles
   </footer>
 
 
- <header>
-       
-     &copy; 2026 BustoMemorial.com. Todos los derechos reservados, <br>replicar este contenido sin autorización podria contraer problemas legales
-   
-  </header>
-
-   
+ 
 </body>
 </html>
