Update delivery and payment information in index.html
Added a paragraph about advance payment and delivery time.

--- a/index.html
+++ b/index.html
@@ -127,17 +127,20 @@
    
      <br>
    <h2>
-     Te enviaremos un boceto para tu aprobación
+     Te enviaremos un boceto para tu aprobación 
+<p>
+Trabajamos con el 50% de anticipo . Tiempo de entrega 5 días hábiles  
+
+</p>
+
+    
    </h1>
 
    <p align="center">
    <img src="shad2.png" alt="Imagen expandible" class="imagen-expandible">
    </p>
-    
-    <br>
-
-    <h2>
-Trabajamos con el 50% de anticipo . Tiempo de entrega a 3 a 5 días hábiles  
+   
+ 
     </h1>
   
  
