--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <h2>Cómo solicitar un busto</h2>
     <p>
       El proceso es sencillo: 
-     <br>Comparte con nosotros las fotografías de la persona o mascota
+     <br>Comparte con nosotros las fotografías en - ALTA DEFINICIÓN -  de la persona o mascota
 
 <p align="center">
 <img src="shad1.png" alt="Imagen expandible" class="imagen-expandible">
