Fix HTML structure and correct heading tag

--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
    
      <br>
    <h2>
-     Te enviaremos un boceto para tu aprobación 
+     Te enviaremos un boceto para tu aprobación </h>
 <p>
 Trabajamos con el 50% de anticipo . Tiempo de entrega 5 días hábiles  
 
 </p>
 
     
-   </h1>
+   
 
    <p align="center">
    <img src="shad2.png" alt="Imagen expandible" class="imagen-expandible">
