Fix HTML structure and add new section

--- a/index.html
+++ b/index.html
@@ -124,8 +124,11 @@
 <img src="shad1.png" alt="Imagen expandible" class="imagen-expandible">
 </p>
 
+     </section>
+
    
      <br>
+    <section>
    <h2>
      Te enviaremos un boceto para tu aprobación </h>
 <p>
