--- a/index.html
+++ b/index.html
@@ -130,24 +130,15 @@
      <br>
     <section>
    <h2>
-     Te enviaremos un boceto para tu aprobación </h>
-<p>
-Trabajamos con el 50% de anticipo . Tiempo de entrega 5 días hábiles  
-
-</p>
-
-    
-   
+     Te enviaremos un boceto para tu aprobación </h2>
+Trabajamos con el 50% de anticipo . Tiempo de entrega 5 días hábiles
 
    <p align="center">
    <img src="shad2.png" alt="Imagen expandible" class="imagen-expandible">
    </p>
    
  
-    </h1>
-  
- 
-  </section>
+   </section>
 
   <div class="cta">
     
