--- a/index.html
+++ b/index.html
@@ -92,12 +92,6 @@
 
 </p>
 
-
-
- 
-
- 
- 
   <section>
 
   
@@ -110,6 +104,15 @@
     </p>
 <p align="center">
 <img src="BanWeb.png" alt="Imagen expandible" class="imagen-expandible">
+</p>
+
+   
+   
+   
+   <br>
+   <p align="center">
+    Puedes elegir si tendrá dedicatoria y base alta
+<img src="Dedicatoria_text.png" alt="Imagen expandible" class="imagen-expandible">
 </p>
 
 
