Replace Dedicatoria_text.png with Dedicatoria.png

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
    <p align="center">
     Puedes elegir si tendrá dedicatoria y base alta
     <br>
-<img src="Dedicatoria_text.png" alt="Imagen expandible" class="imagen-expandible">
+<img src="Dedicatoria.png" alt="Imagen expandible" class="imagen-expandible">
 </p>
 
 
