--- a/index.html
+++ b/index.html
@@ -144,6 +144,24 @@ Trabajamos con el 50% de anticipo . Tiempo de entrega 5 días hábiles
  
    </section>
 
+
+
+<section>
+    <h2>Te podria interesar; </h2>
+    <p>
+      Tambien podemos realizar esculturas de personas o cualquier cosa que te guste  
+     <br>  Tambien podemos realizar esculturas de personas o cualquier cosa que te guste  
+
+<p align="center">
+<img src="shad1.png" alt="Imagen expandible" class="imagen-expandible">
+</p>
+
+     </section>
+
+
+
+
+   
   <div class="cta">
     
     <a href="https://wa.me/5511895799?text=Hola, deseo cotizar,%20quiero%20solicitar%20información%20sobre%20los%20bustos%20memoriales." target="_blank">
