Fix HTML syntax for image tags

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ Trabajamos con el 50% de anticipo . Tiempo de entrega 5 días hábiles
      <br>  Tambien podemos realizar esculturas de personas o cualquier cosa que te guste  
 
 <p align="center">
-<img src="shad1.png" alt="Imagen expandible" class="imagen-expandible">
+<img src="ban_mini.png" alt="Imagen expandible" class="imagen-expandible">
 </p>
 
      </section>
