--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@ Trabajamos con el 50% de anticipo . Tiempo de entrega 5 días hábiles
 
 
 <section>
-    <h2>Te podria interesar; </h2>
+    <h2>->Te podria interesar<- </h2>
     <p>
       Tambien podemos realizar esculturas de personas o cualquier cosa que te guste  
-     <br>  Tambien podemos realizar esculturas de personas o cualquier cosa que te guste  
+     <br>    
 
 <p align="center">
 <img src="ban_mini.png" alt="Imagen expandible" class="imagen-expandible">
