--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <h2>Cómo solicitar un busto</h2>
     <p>
       El proceso es sencillo: 
-     <br>Comparte con nosotros las fotografías en - ALTA DEFINICIÓN -  de la persona o mascota
+     <br>Comparte con nosotros un par de fotografías en - ALTA DEFINICIÓN -  de la persona o mascota
 
 <p align="center">
 <img src="shad1.png" alt="Imagen expandible" class="imagen-expandible">
@@ -170,7 +170,7 @@ Trabajamos con el 50% de anticipo . Tiempo de entrega 5 días hábiles
   </div>
 
   <footer>
-    <p>&copy; 2026 Bustos Memoriales. Todos los derechos reservados, <br>replicar este contenido sin autorización podria contraer problemas legales.</p>
+    <p>&copy; 2026 BustoMemoria.com .Todos los derechos reservados, <br>replicar este contenido sin autorización podria contraer problemas legales.</p>
   </footer>
 
 
