Update text in section about sculptures

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ Trabajamos con el 50% de anticipo . Tiempo de entrega 5 días hábiles
 <section>
     <h2>->Te podria interesar<- </h2>
     <p>
-      Tambien podemos realizar esculturas de personas o cualquier cosa que te guste  
+      Tambien podemos realizar esculturas de personas, figuras o cualquier cosa que te imagines   
      <br>    
 
 <p align="center">
