Fix footer company name from BustoMemoria to BustoMemorial

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ Trabajamos con el 50% de anticipo . Tiempo de entrega 5 días hábiles
   </div>
 
   <footer>
-    <p>&copy; 2026 BustoMemoria.com .Todos los derechos reservados, <br>replicar este contenido sin autorización podria contraer problemas legales.</p>
+    <p>&copy; 2026 BustoMemorial.com .Todos los derechos reservados, <br>replicar este contenido sin autorización podria contraer problemas legales.</p>
   </footer>
 
 
