--- a/index.html
+++ b/index.html
@@ -103,7 +103,11 @@
 
     </p>
 <p align="center">
-<img src="BanWeb.png" alt="Imagen expandible" class="imagen-expandible">
+
+<video width="640" height="360" controls>
+  <source src="vidBM.mp4" type="video/mp4">
+</video>
+ 
 </p>
 
    
