--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
     </p>
 <p align="center">
 
+
+<video>
+  <source src="VidBM.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+
+ 
 <video width="640" height="360" controls>
   <source src="vidBM.mp4" type="video/mp4">
 </video>
