--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
 
 
 <video>
-  <source src="VidBM.mp4" type="video/mp4">
+  <source src="vid.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
  
 <video width="640" height="360" controls>
-  <source src="vidBM.mp4" type="video/mp4">
+  <source src="vid.mp4" type="video/mp4">
 </video>
  
 </p>
