--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <h1>Sobre nuestro trabajo</h1>
      
     <p>
-      Elaborado con resina de la más alta calidad , creamos tu pieza con respeto y dedicación, para honrar la memoria 
+      Elaborado con resina de la más alta calidad , creamos tu pieza en 14 Centrimetros,  con respeto y dedicación, para honrar la memoria 
      de nuestros seres queridos 
 
     </p>
@@ -115,35 +115,7 @@
 
  
 </iframe>
-
  
-
-
-
-<video width="640" height="360" controls>
-  <source src="https://www.youtube.com/watch?v=l747RI0d9rY">
-</video>
- 
-
- 
-<video width="640" height="360" controls>
-  <source src="vid.mp4" type="video/mp4">
-</video>
- 
-</p>
-
-   
-   
-   
-   <br>
-   <p align="center">
-    Puedes elegir si tendrá dedicatoria y base alta
-    <br>
-<img src="Dedicatoria.png" alt="Imagen expandible" class="imagen-expandible">
-</p>
-
-
-
   <section>
     <h2>Cómo solicitar un busto</h2>
     <p>
@@ -161,7 +133,8 @@
     <section>
    <h2>
      Te enviaremos un boceto para tu aprobación </h2>
-Trabajamos con el 50% de anticipo . Tiempo de entrega 5 días hábiles
+Trabajamos con el 50% de anticipo . Medidas 8x8x14
+     <br>Tiempo de entrega 5 días hábiles
 
    <p align="center">
    <img src="shad2.png" alt="Imagen expandible" class="imagen-expandible">
