--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
     <h1>Sobre nuestro trabajo</h1>
      
     <p>
-      Elaborado con resina de la más alta calidad , creamos tu pieza en 14 Centrimetros,  con respeto y dedicación, para honrar la memoria 
-     de nuestros seres queridos 
+      Elaborado con resina de la más alta calidad,con respeto y dedicación, para honrar la memoria de nuestros seres queridos 
 
     </p>
 <p align="center">
@@ -119,8 +118,7 @@
   <section>
     <h2>Cómo solicitar un busto</h2>
     <p>
-      El proceso es sencillo: 
-     <br>Comparte con nosotros un par de fotografías en - ALTA DEFINICIÓN -  de la persona o mascota
+           <br>1.- Comparte con nosotros un par de fotografías en - ALTA DEFINICIÓN -  de la persona o mascota
 
 <p align="center">
 <img src="shad1.png" alt="Imagen expandible" class="imagen-expandible">
@@ -132,16 +130,14 @@
      <br>
     <section>
    <h2>
-     Te enviaremos un boceto para tu aprobación </h2>
-Trabajamos con el 50% de anticipo . Medidas 8x8x14
-     <br>Tiempo de entrega 5 días hábiles
+     2.-Te enviaremos un boceto para tu aprobación </h2>
+Trabajamos con el 50% de anticipo , con 5 días hábiles para entrega 
+     <br> Nuestras figuras miden 8 x 8 x 14 Centrimetros
 
    <p align="center">
    <img src="shad2.png" alt="Imagen expandible" class="imagen-expandible">
    </p>
-   
- 
-   </section>
+      </section>
 
 
 
