--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ Trabajamos con el 50% de anticipo , con 5 días hábiles para entrega
   </div>
 
   <footer>
-    <p>&copy; 2026 BustoMemorial.com .Todos los derechos reservados, <br>replicar este contenido sin autorización podria contraer problemas legales.</p>
+    <p>&copy; 2026 BustoMemorial.com .Todos los derechos reservados <br>La reproducción total o parcial de este contenido sin autorización expresa puede derivar en acciones legales.</p>
   </footer>
 
 
