--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   <section>
     <h2>Cómo solicitar un busto</h2>
     <p>
-           <br>1.- Comparte con nosotros un par de fotografías en - ALTA DEFINICIÓN -  de la persona o mascota
+           <br>1.- Comparte con nosotros la foto de tu ser querido
 
 <p align="center">
 <img src="shad1.png" alt="Imagen expandible" class="imagen-expandible">
