--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@ Trabajamos con el 50% de anticipo , con 5 días hábiles para entrega
   <div class="cta">
     
     <a href="https://wa.me/5511895799?text=Hola, deseo cotizar,%20quiero%20solicitar%20información%20sobre%20los%20bustos%20memoriales." target="_blank">
-      Cotiza gratis en WhatsApp
+      Cotiza gratis en WhatsApp. envios en todo el país
+     <br>Ignoramos propuestas de regateo
     </a>
   </div>
 
