--- a/index.html
+++ b/index.html
@@ -166,8 +166,9 @@ Trabajamos con el 50% de anticipo , con 5 días hábiles para entrega
   
   </div>
    <br>
+   <p align="center">
  Ignoramos propuestas de regateo
-
+   </p>
 
    
   <footer>
