--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ Trabajamos con el 50% de anticipo , con 5 días hábiles para entrega
      <br> Nuestras figuras miden 8 x 8 x 14 Centrimetros
 
    <p align="center">
-   <img src="shad2.png" alt="Imagen expandible" class="imagen-expandible">
+   <img src="perro.png" alt="Imagen expandible" class="imagen-expandible">
    </p>
       </section>
 
