--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <h1>Sobre nuestro trabajo</h1>
      
     <p>
-      Elaborado con resina de la más alta calidad, honramos la memoria de nuestros seres queridos 
+      Elaborado con resina de la más alta calidad, honramos la memoria de tus seres queridos
 
     </p>
 <p align="center">
