--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
      <br>
     <section>
    <h2>
-     2.-Te enviaremos un boceto para tu aprobación </h2>
+     2.-Te enviaremos un boceto para aprobación</h2>
 Trabajamos con el 50% de anticipo , con 5 días hábiles para entrega 
-     <br> Nuestras figuras miden 8 x 8 x 14 Centrimetros
+     <br> Medidas: 8 x 8 x 14 Centrimetros
 
    <p align="center">
    <img src="shad2.png" alt="Imagen expandible" class="imagen-expandible">
