--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
 </iframe>
  
   <section>
-    <h2>Cómo solicitar un busto</h2>
+    <h2>Cómo solicitar un busto:</h2>
     <p>
-           <br>1.- Comparte con nosotros la foto de tu ser querido
+           <br>Comparte con nosotros la foto de tu ser querido
 
 <p align="center">
 <img src="perro.png" alt="Imagen expandible" class="imagen-expandible">
@@ -130,7 +130,7 @@
      <br>
     <section>
    <h2>
-     2.-Te enviaremos un boceto para aprobación</h2>
+    Te enviaremos un boceto para aprobación</h2>
 Trabajamos con el 50% de anticipo , con 5 días hábiles para entrega 
      <br> Medidas: 8 x 8 x 14 Centrimetros
 
