--- a/index.html
+++ b/index.html
@@ -142,7 +142,9 @@ Trabajamos con el 50% de anticipo , con 5 días hábiles para entrega
 
 
 <section>
+ <font color="red">
     <h2>->Te podria interesar<- </h2>
+ </font>
     <p>
       Tambien podemos realizar esculturas de personas, figuras o cualquier cosa que te imagines   
      <br>    
