--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@ Trabajamos con el 50% de anticipo , con 5 días hábiles para entrega
 
 <section>
  <font color="red">
-    <h2>->Te podria interesar<- </h2>
+    <h2>
+     <img src="gif.gif" alt="Imagen expandible" class="imagen-expandible">
+           </h2>
  </font>
     <p>
       Tambien podemos realizar esculturas de personas, figuras o cualquier cosa que te imagines   
