--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@ Trabajamos con el 50% de anticipo , con 5 días hábiles para entrega
 
 
 <section>
- <font color="red">
-    <h2>
-     <img src="gif.gif" alt="Imagen expandible" class="imagen-expandible">
+     <h2>
+      <p aling="center">
+     <img src="gif.gif">
            </h2>
- </font>
-    <p>
+</p>
+    <br>
       Tambien podemos realizar esculturas de personas, figuras o cualquier cosa que te imagines   
      <br>    
 
