--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@ Trabajamos con el 50% de anticipo , con 5 días hábiles para entrega
 
 <section>
      <h2>
+      <font color="red">
+      Te podria interesar:
+      </font>
       <p aling="center">
      <img src="gif.gif">
            </h2>
