--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@ Trabajamos con el 50% de anticipo , con 5 días hábiles para entrega
       </section>
 
 
+    <p aling="center">
+     <img src="gif.gif">
+    </p>
 
 <section>
      <h2>
@@ -160,10 +163,7 @@ Trabajamos con el 50% de anticipo , con 5 días hábiles para entrega
 
      </section>
 
-
-
-
-   
+ 
   <div class="cta">
     
     <a href="https://wa.me/5511895799?text=Hola, deseo cotizar,%20quiero%20solicitar%20información%20sobre%20los%20bustos%20memoriales." target="_blank">
