--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ Trabajamos con el 50% de anticipo , con 5 días hábiles para entrega
 
 
    
-    <p aling="center">
+    <p aling="right">
      <img src="gif.gif">
     </p>
       Tambien podemos realizar esculturas de personas, figuras o cualquier cosa que te imagines   
